# machineq

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/: dependabot.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: docs.yml  main.yml  on-release-main.yml  release.yml  validate-codecov-config.yml
docs/: quickstart.md
docs/api/: account.md  application.md  auth.md  client.md  decoder_type.md  device.md  device_group.md  device_profile.md  gateway.md  gateway_group.md  gateway_profile.md  logs.md  multicast_group.md  output_profile.md  rf_region.md  role.md  service_profile.md  users.md  version.md
docs/api/models/: account.md  application.md  decoder_type.md  device.md  device_group.md  device_profile.md  gateway.md  gateway_group.md  gateway_profile.md  logs.md  multicast_group.md  output_profile.md  rf_region.md  role.md  service_profile.md  shared.md  users.md  version.md
docs/usage/: clients.md
machineq/: __init__.py  auth.py  utils.py
machineq/client/: __init__.py  async_.py  base.py  exceptions.py  sync.py
machineq/client/resources/: __init__.py
machineq/core/: utils.py
machineq/core/account/: __init__.py  api.py  models.py
machineq/core/application/: __init__.py  api.py  models.py
machineq/core/decoder_type/: __init__.py  api.py  models.py
machineq/core/device/: __init__.py  api.py  models.py
machineq/core/device_group/: __init__.py  api.py  models.py
machineq/core/device_profile/: __init__.py  api.py  models.py
machineq/core/gateway/: __init__.py  api.py  models.py
machineq/core/gateway_group/: __init__.py  api.py  models.py
machineq/core/gateway_profile/: __init__.py  api.py  models.py
machineq/core/logs/: __init__.py  api.py  models.py
machineq/core/multicast_group/: __init__.py  api.py  (+1 more)
tests/: async_test_client.py  conftest.py  test_account.py  test_application.py  test_decoder_type.py  test_device.py  test_device_group.py  test_device_profile.py  test_gateway.py  test_gateway_group.py  test_gateway_profile.py  test_logs.py  test_multicast_group.py  test_output_profile.py  test_rf_region.py  test_role.py  test_service_profile.py  test_users.py  test_version.py
tests/sample_data/: __init__.py  common.py
(+20 files in other folders)
