[project]
name = "machineq"
version = "0.0.1"
description = "Python package to access MachineQ APIs"
authors = [{ name = "Oleg Zvonarov", email = "19969581+OlegZv@users.noreply.github.com" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.10,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx==0.28.1",
    "pydantic==2.12.5",
]

[project.urls]
Homepage = "https://github.com/OlegZv/machineq"
Repository = "https://github.com/OlegZv/machineq"
Documentation = "https://github.com/OlegZv/machineq"

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "tox-uv==1.29.0",
    "deptry==0.24.0",
    "ty==0.0.14",
    "pytest-cov==7.0.0",
    "ruff==0.15.2",
    "prek==0.3.3",
    "ipykernel==7.2.0",
    "python-dotenv==1.2.1",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "machineq"
module-root = ""

[tool.ty.environment]
python = "./.venv"
python-version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["machineq"]
